--- a/apps/angular-demo/src/styles.scss
+++ b/apps/angular-demo/src/styles.scss
@@ -1,5 +1,6 @@
+@use 'scss/_checkbox.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 /* You can add global styles to this file, and also import other style files */
