--- a/libs/src/lib/table/table.scss
+++ b/libs/src/lib/table/table.scss
@@ -1,46 +1,44 @@
-.table {
+.my-lib {
+  &-table {
     display: flex;
     flex-direction: column;
-}
+  }
 
-.thead {
+  &-thead {
     display: flex;
     background-color: #f0f0f0;
-}
+  }
 
-.tbody {
+  &-tbody {
     display: flex;
     flex-direction: column;
     .row:last-child {
-        border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
     }
-}
+  }
 
-.row {
+  &-row {
     display: flex;
-}
+  }
 
-.cell {
+  &-cell {
     flex: 1;
     padding: 8px;
     border: 1px solid #ddd;
     border-right: 0px;
     border-bottom: 0px;
     box-sizing: border-box;
-}
-.row .cell:last-child {
+  }
+  &-row &-cell:last-child {
     border-right: 1px solid #ddd;
-}
+  }
 
-
-
-
-.table-md {
+  &-table-md {
     display: flex;
     flex-direction: column;
-}
+  }
 
-.row-md {
+  &-row-md {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -48,4 +46,5 @@
     padding: 8px;
     border: 1px solid #ddd;
     padding: 20px;
+  }
 }
